# cwsite

./: .gitignore
cwsite-server/: Cargo.toml  build.gradle  settings.gradle  sqlx-data.json
cwsite-server/migrations/: 20220901132011_players_setup.up.sql  20220901191155_authentication_tokens_setup.up.sql
cwsite-server/src/: api.rs  data.rs  main.rs  oauth.rs
cwsite-server/src/main/java/space/cubicworld/cwsite/: CwsiteApplication.java
cwsite-server/src/main/java/space/cubicworld/cwsite/model/: UserModel.java
cwsite-server/src/main/java/space/cubicworld/cwsite/repository/: UserRepository.java
cwsite-server/src/main/java/space/cubicworld/cwsite/rest/: UserRestController.java
cwsite-server/src/main/resources/: application.properties
docs/: entities.md  rest.md
